--- a/cascade_lifecycle_msgs/package.xml
+++ b/cascade_lifecycle_msgs/package.xml
@@ -12,10 +12,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclcpp</depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
   <depend>builtin_interfaces</depend>
   <depend>lifecycle_msgs</depend>
-  <depend>rosidl_default_generators</depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
