--- a/.github/workflows/iron-devel.yaml
+++ b/.github/workflows/iron-devel.yaml
@@ -1,12 +1,12 @@
-name: humble-devel
+name: iron-devel
 
 on:
   pull_request:
     branches:
-      - humble-devel
+      - iron-devel
   push:
     branches:
-      - humble-devel
+      - iron-devel
       
 jobs:
   build-and-test:
@@ -19,12 +19,12 @@ jobs:
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.3.3
         with:
-          required-ros-distributions: humble
+          required-ros-distributions: iron
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.2.5
         with:
           package-name: rclcpp_cascade_lifecycle cascade_lifecycle_msgs
-          target-ros2-distro: humble
+          target-ros2-distro: iron
           vcs-repo-file-url: ""
           colcon-mixin-name: coverage-gcc
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
