--- a/.github/workflows/rolling-devel.yaml
+++ b/.github/workflows/rolling-devel.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.3.6
         with:
-          package-name: rclcpp_cascade_lifecycle cascade_lifecycle_msgs
+          package-name: rclcpp_cascade_lifecycle rclcpy_cascade_lifecycle cascade_lifecycle_msgs
           target-ros2-distro: rolling
           vcs-repo-file-url: ""
           colcon-mixin-name: coverage-gcc
