--- a/.github/workflows/rolling.yaml
+++ b/.github/workflows/rolling.yaml
@@ -26,8 +26,14 @@ jobs:
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.3.6
         with:
-          package-name: rclcpp_cascade_lifecycle cascade_lifecycle_msgs
+          package-name: rclcpp_cascade_lifecycle rclpy_cascade_lifecycle cascade_lifecycle_msgs
           target-ros2-distro: rolling
+          colcon-defaults: |
+            {
+              "test": {
+                "parallel-workers" : 1
+              }
+            }
           vcs-repo-file-url: ""
           colcon-mixin-name: coverage-gcc
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
