--- a/.github/workflows/jazzy-devel.yaml
+++ b/.github/workflows/jazzy-devel.yaml
@@ -3,10 +3,10 @@ name: jazzy-devel
 on:
   pull_request:
     branches:
-      - jazzy
+      - jazzy-devel
   push:
     branches:
-      - jazzy
+      - jazzy-devel
   workflow_dispatch:
     schedule:
       - cron: '0 0 * * 0'
