--- a/.github/workflows/jazzy-devel.yaml
+++ b/.github/workflows/jazzy-devel.yaml
@@ -1,4 +1,4 @@
-name: jazzy-devel
+ name: jazzy-devel
 
 on:
   pull_request:
@@ -20,6 +20,7 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
+      - run: find ${GITHUB_WORKSPACE}
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.9
         with:
