--- a/.github/workflows/jazzy-devel.yaml
+++ b/.github/workflows/jazzy-devel.yaml
@@ -20,7 +20,8 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
-      - run: find ${GITHUB_WORKSPACE}
+      - name: debug
+        run: find ${GITHUB_WORKSPACE}
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.9
         with:
