--- a/.github/workflows/jazzy-devel.yaml
+++ b/.github/workflows/jazzy-devel.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: debug
-        run: find ${GITHUB_WORKSPACE}
+        run: ls ${GITHUB_WORKSPACE}
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.9
         with:
