--- a/.github/workflows/jazzy-devel.yaml
+++ b/.github/workflows/jazzy-devel.yaml
@@ -20,8 +20,6 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
-      - name: debug
-        run: ls ${GITHUB_WORKSPACE}
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.9
         with:
@@ -29,7 +27,7 @@ jobs:
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.3.13
         with:
-          package-name: rclcpp_cascade_lifecycle rclcpy_cascade_lifecycle cascade_lifecycle_msgs
+          package-name: rclcpp_cascade_lifecycle cascade_lifecycle_msgs
           target-ros2-distro: jazzy
           colcon-defaults: |
             {
